<resources>
    <string name="app_name">Ustaad The Handyman</string>

    <!--Titles-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="login_description">Please verify your number to book our services</string>
    <string name="signup">Sign Up</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="retype_password">Retype password</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="terms">Terms Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="our_services">Our services</string>
    <string name="electricity">Electricity</string>
    <string name="plumbing">Plumbing</string>
    <string name="painting">Painting</string>
    <string name="air_conditioner">Air Condition</string>
    <string name="logistics">Logistics</string>
    <string name="pc_serviceing">Computer</string>
    <string name="solar_pannels">Solar Panel &amp; UPS</string>
    <string name="mobile_servicing">Mobile</string>
    <string name="carpenter">Carpenter</string>
    <string name="hire_handy_man">Contractor</string>
    <string name="cctv_fitting">CC T.V</string>
    <string name="air_condition_service">Air conditioner</string>
    <string name="washing_machine">Home Appliances</string>
    <string name="home_applience">Home appliances</string>
    <string name="cart">Cart</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="verify">Verify</string>
    <string name="enter_additonal_details">Enter Additional details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="book_service">Book Service</string>
    <string name="next">Next</string>
    <string name="selected_service">Selected item</string>
    <string name="service_time">Service time</string>
    <string name="get_current_location">Select current place</string>
    <string name="pick_address">Pick address</string>
    <string name="address">Address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="select_service_type">Select service type</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback">Feed back</string>
    <string name="service_name">Service name</string>
    <string name="service_type">Service type</string>
    <string name="how_much_you_rate_us">How much you rate us..?</string>
    <string name="send_otp">Send OTP</string>
    <string name="skip">Skip</string>
    <string name="select_servecing_item">What thing for service</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="about">About</string>
    <string name="my_orders">My orders</string>
    <string name="rate_us">Rate us</string>
    <string name="my_address">My address</string>
    <string name="you_location">Your location</string>
    <string name="custom">Custom</string>
    <string name="select_location">Pin this location</string>
    <string name="move_map">Move map</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_address">Add address</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="house">House No</string>
    <string name="street">Street</string>
    <string name="save_changes">Save changes</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="edit_image">Edit image</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="call_us">Call us</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="send_support_ticket">Send support ticket</string>
    <string name="status">Status</string>
    <string name="cleared_time">Cleared time</string>
    <string name="invoice">Invoice</string>
    <string name="booking_id">Booking id</string>
    <string name="booking_time">Booking Time</string>
    <string name="update_requires">You need to update to enjoy ton of new features</string>
    <string name="update">Update</string>
    <string name="post">Post</string>
    <string name="rate_our_service">Rate our service</string>
    <string name="water_purifier">Water purifier</string>
    <!--Service Info-->

    <string name="title_activity_user_location">Map</string>
    <string name="title_activity_location">Map</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">Pending</string>
    <string name="help">help</string>
    <string name="print">Print</string>

</resources>
