<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderInfo">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_view_order"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/booking_id"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_booking_id"
                style="@style/txtStyle"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_type"
                style="@style/txtStyle"
                android:textSize="@dimen/_15ssp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_type"
                style="@style/txtStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/description"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_decription"
                style="@style/txtStyle"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/booking_time"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_booking_time"
                style="@style/txtStyle"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/service_time"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_time"
                style="@style/txtStyle"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/name"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_user"
                style="@style/txtStyle"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/mobile"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_mobile"
                style="@style/txtStyle"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/address"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_address"
                style="@style/txtStyle"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/status"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_history_service_status"
                style="@style/txtStyle"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/li_order_info_cleared"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/txtStyle"
                    android:text="@string/cleared_time"
                    android:textSize="@dimen/_15ssp"
                    android:layout_marginTop="@dimen/_12sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_history_service_cleared_time"
                    style="@style/txtStyle"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/txtStyle"
                    android:text="@string/price"
                    android:textSize="@dimen/_15ssp"
                    android:layout_marginTop="@dimen/_12sdp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_history_service_price"
                    style="@style/txtStyle"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_invoice"
                    style="@style/txtStyle"
                    android:text="@string/invoice"
                    android:textSize="@dimen/_15ssp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>