<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderSummary">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_book_order"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_type"
                style="@style/txtStyle"
                android:textSize="@dimen/_15ssp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_summary_service_type"
                style="@style/txtStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/description"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_summary_service_decription"
                style="@style/txtStyle"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/service_time"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_summary_service_time"
                style="@style/txtStyle"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/name"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_summary_service_user"
                style="@style/txtStyle"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/mobile"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_summary_service_mobile"
                style="@style/txtStyle"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtStyle"
                android:text="@string/address"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_12sdp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_summary_service_address"
                style="@style/txtStyle"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_book_service"
        android:background="@color/colorPrimary"
        android:text="@string/book_service"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/_18ssp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>