<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Address"
    android:background="@color/page_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/ll_address_view">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_address"
            app:drawableStartCompat="@drawable/ic_add"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:drawablePadding="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_user_address"/>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/ll_address_add"
       android:orientation="vertical"
       android:layout_gravity="center_horizontal|center_vertical"
       android:paddingStart="@dimen/_20sdp"
       android:paddingEnd="@dimen/_20sdp"
       android:visibility="gone">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/enter_additonal_details"
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/_20ssp"
           android:layout_marginBottom="@dimen/_40sdp"/>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/et_person_name"
               android:hint="@string/name"/>
       </com.google.android.material.textfield.TextInputLayout>
       <com.google.android.material.textfield.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/et_person_nmobile"
               android:inputType="number"
               android:hint="@string/mobile"/>
       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/txt_geo_address"
           android:layout_marginTop="@dimen/_10sdp"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/btn_set_address"
           android:background="@color/colorPrimary"
           android:text="@string/add_address"
           android:textAllCaps="false"
           android:textColor="@color/white"
           android:paddingStart="@dimen/_40sdp"
           android:paddingEnd="@dimen/_40sdp"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="@dimen/_40sdp"/>
   </LinearLayout>

</FrameLayout>